# ccvt

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
ccvt/: __main__.py  cvt.py
ccvt/data/: cc.json
